[package]
name = "nyp_discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
poise = "0.6.1"
serenity = { version = "0.12.3", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
